[package]
name = "parser_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
vec1 = "1.10.1"

[dependencies.syn]
version = "2.0.38"
features = ["full"]

[features]
vec1 = []
